# OxideBox

./: README.md
oxidebox/: .gitignore  Cargo.toml
oxidebox/src/: battle.rs  challenge.rs  cli.rs  command.rs  container.rs  database.rs  evolution.rs  main.rs  moves.rs  stats.rs  team.rs
oxidebox/src/cgroups_integration/: cgroups_integration.rs
oxidebox/src/cli/: commands.rs  mod.rs
